--- a/sample_ide.html
+++ b/sample_ide.html
@@ -2,7 +2,7 @@
 				<head>
 								<title>Sample</title>
 								<body>
-												<iframe frameborder="0" width="100%" height="500px" src="https://replit.com/@Bloodredemption/Final-Project-Console-Game?lite=true"></iframe>
+												<iframe frameborder="0" width="100%" height="500px" src="https://replit.com/@Bloodredemption/Final-Project-Console-Game?embed=true"></iframe>
 								</body>
 				</head>
 </html>
